# SOC_AI_agent

./: .env.template  README.md  pyproject.toml
data/: events.json  prompt_for_analysis.jinja2  soc_report_20251106_102820.json
src/: agent.py
