[project]
name = "soc-ai-agent"
version = "0.1.0"
description = ""

authors = [
    {name = "Aleksandr Mamylov",email = "alexadevv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
